--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 @use "layout/footer";
 
 // 4. Components
-@use "components/button";
+@use "components/button", "components/caixa";
 
 // 5. Pages
 @use "pages/inscricao";
