--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+/* Error: expected ";".
+ *    ,
+ * 12 | @use "components/button", "components/caixa";
+ *    |                         ^
+ *    '
+ *   sass\main.scss 12:25  root stylesheet */
 
-
-/*# sourceMappingURL=style.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected ";".\a    \2577 \a 12 \2502  @use "components/button", "components/caixa";\d\a    \2502                          ^\a    \2575 \a   sass\\main.scss 12:25  root stylesheet';
+}
