corrigindo um pequeno erro

--- a/sass/abstracts/_helpers.scss
+++ b/sass/abstracts/_helpers.scss
@@ -1,3 +1,5 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
+$cor-preta: #1a1b1f;
+$cor-cinza-claro: #f1f1f1;
