--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,10 +6,11 @@
 @use "base/typography";
 
 // 3. Layout-related sections
-@use "layout/footer";
+@use "layout/layout";
 
 // 4. Components
-@use "components/button", "components/caixa";
+@use "components/button";
+@use "components/caixa";
 
 // 5. Pages
 @use "pages/inscricao";
